# ST-MT940

./: README.md  pyproject.toml
src/: main.py  options.py  parser.py
