[project]
name = "st-mt940"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mt-940>=4.30.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "streamlit>=1.46.0",
    "xlsxwriter>=3.2.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
